compiled/tutorial/manifests/tutorial-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: tutorial
  name: tutorial
