compiled/tutorial/manifests/echo-server-bundle.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    name: echo-server
  name: echo-server
  namespace: tutorial
spec:
  replicas: 3
  selector:
    matchLabels:
      name: echo-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: echo-server
    spec:
      containers:
        - env:
            - name: KAPITAN_APPLICATION
              value: microservices
          image: jmalloc/echo-server
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Host
                  value: www.google.com
              path: /_health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          name: echo-server
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 8081
              name: internal
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /_ready
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              memory: 1G
            requests:
              hugepages-2Mi: 80Mi
              memory: 1G
          volumeMounts:
            - mountPath: /opt/echo-service
              name: config
              readOnly: true
        - image: nginx
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/echo-service
              name: config
              readOnly: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            items:
              - key: echo-service.conf
                path: echo-service.conf
            name: echo-server
          name: config
        - name: secret
          secret:
            defaultMode: 420
            secretName: echo-server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: echo-server
  name: echo-server
  namespace: tutorial
spec:
  selector:
    name: echo-server
  sessionAffinity: None
  type: LoadBalancer
