compiled/tutorial/manifests/echo-server-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    app.kapicorp.dev/component: echo-server
    name: echo-server
  name: echo-server
  namespace: tutorial
spec:
  ports:
    - name: nginx
      port: 80
      protocol: TCP
      targetPort: nginx
  selector:
    name: echo-server
  sessionAffinity: None
  type: LoadBalancer
