compiled/tutorial/manifests/echo-server-security.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kapicorp.dev/component: echo-server
    name: echo-server
  name: echo-server
  namespace: tutorial
spec:
  egress:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - port: 6379
          protocol: TCP
  podSelector:
    matchLabels:
      name: echo-server
  policyTypes:
    - Ingress
